--- a/vignettes/peptide_mapping_example_1.Rmd
+++ b/vignettes/peptide_mapping_example_1.Rmd
@@ -54,7 +54,7 @@ print(fst)
 # Mapping peptides to protein sequence
 ```{r mapping, message = FALSE}
 x <- x %>%
-  mutate(Pos = map(pepSeq, ~ str_locate(fst, .x)),
+  mutate(Pos = map(pepSeq, ~ str_locate(as.character(fst), .x)),
          Start = map_int(Pos, 1),
          End = map_int(Pos, 2)) %>%
   filter(!is.na(Start), !is.na(End)) %>%
@@ -91,8 +91,9 @@ p1 <- p +
   annotate("text", x = lbls, y = -0.55, label = lbls, angle=90, 
            hjust = 1, vjust = 0.5) +
   theme_void() +
-  theme(panel.border = element_rect(fill = NA, colour = "grey20"),
-        strip.background = element_rect(fill = "grey85", colour = "grey20"),
+  theme(panel.border = element_rect(fill = NA, color = "grey20"),
+        strip.background = element_rect(fill = "grey85", color = "grey20", 
+                                        linewidth = 0.2),
         plot.margin = margin(10, 10, 10, 10))
 plot(p1)
 ```
